RESOLVED FIXED51278
Crash at WebCore::SplitElementCommand::SplitElementCommand
https://bugs.webkit.org/show_bug.cgi?id=51278
Summary Crash at WebCore::SplitElementCommand::SplitElementCommand
Enrica Casucci
Reported 2010-12-17 15:36:33 PST
Created attachment 76920 [details] test case Run the attached test case to see the crash.
Attachments
test case (666 bytes, text/html)
2010-12-17 15:36 PST, Enrica Casucci
no flags
Patch (4.15 KB, patch)
2010-12-17 15:43 PST, Enrica Casucci
darin: review+
Enrica Casucci
Comment 1 2010-12-17 15:43:48 PST
Ryosuke Niwa
Comment 2 2010-12-17 17:55:01 PST
Comment on attachment 76921 [details] Patch Do we do the right thing (i.e. remove blockquote) with your patch? Although if the blockquote is inline, then the text isn't really indented so outdenting doesn't really have any visible effect. Also I'd like to see a test case where ul/ol and li are inline.
Enrica Casucci
Comment 3 2010-12-20 10:05:09 PST
(In reply to comment #2) > (From update of attachment 76921 [details]) > Do we do the right thing (i.e. remove blockquote) with your patch? Although if the blockquote is inline, then the text isn't really indented so outdenting doesn't really have any visible effect. Also I'd like to see a test case where ul/ol and li are inline. I believe the answer is yes. My change is meant to take into account the fact that startOfEnclosingBlock doesn't handle properly a blockquote with inline style and returns a node outside the blockquote. What we want here, is to be able to fall into the first if statement (case in which the block quote is in its own paragraph). The other scenario you mention, is handled by the code after the if statement where we do the splitting. The ordered/unordered list case is handled by completely different code.
Darin Adler
Comment 4 2010-12-20 12:29:31 PST
Comment on attachment 76921 [details] Patch We should add more test cases as Ryosuke suggests.
Enrica Casucci
Comment 5 2010-12-20 14:55:32 PST
Added additional tests, per Ryosuke's comments. Committed revision 74369.
Ryosuke Niwa
Comment 6 2010-12-20 15:05:37 PST
(In reply to comment #5) > Added additional tests, per Ryosuke's comments. > Committed revision 74369. Thanks for the test case.
WebKit Review Bot
Comment 7 2010-12-20 15:58:24 PST
http://trac.webkit.org/changeset/74369 might have broken GTK Linux 64-bit Debug The following tests are not passing: inspector/extensions-audits.html
Note You need to log in before you can comment on or make changes to this bug.