Crash at WebCore::SplitElementCommand::SplitElementCommand https://bugs.webkit.org/show_bug.cgi?id=51278 <rdar://problem/7347139>

Reviewed by Darin Adler.

WebCore:

Executing outdent command on an inline blockquote that is
not the first element in a block causes a crash.
The fix consists in chaging the was the start of block is
calculated in case of the inline blockquote.

Test: editing/execCommand/outdent-inline-blockquote.html
      editing/execCommand/outdent-inline-list.html

* editing/IndentOutdentCommand.cpp:
(WebCore::IndentOutdentCommand::outdentParagraph):

LayoutTests:

* editing/execCommand/outdent-inline-blockquote-expected.txt: Added.
* editing/execCommand/outdent-inline-blockquote.html: Added.
* editing/execCommand/outdent-inline-list-expected.txt: Added.
* editing/execCommand/outdent-inline-list.html: Added.



Canonical link: https://commits.webkit.org/64711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74369 268f45cc-cd09-0410-ab3c-d52691b4dbfc